[package]
name = "zagreus"
version = "0.1.0"
edition = "2021"
description = "A featureful library for backoff handling"
license = "MIT"
categories = ["web-programming","network-programming",]
keywords = ["backoff", "retry", "exponential"]

[dependencies]
smol = {version = "2.0.0", optional = true}

[features]
#This feature is highly risky for library crates.
#this feature enables an auto-trait which can makes for extremely volatile semver hazards.
#This requires nightly rust and very likely always will. Take care not to use this feature
#in library crates.
nightly_can_backoff = []

#We need an async executor to run tests. We use smol because it's small.
tests = ["dep:smol"]
